deployment/istio-configurations/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "strict-mtls-policy"
  namespace: "istio-system"
spec:
  mtls:
    mode: STRICT
