deployment/istio-configurations/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: default
  name: backend-gateway
spec:
  selector:
    istio: ingressgateway # use DNS name if deploying on AKS, GKE or EKS. Use * if deploying on local machine using Docker desktop
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: true
